force-app/integration-logs-framework/objects/idhIntegration_Definition__mdt/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <description>Flag indicating whether this integration is enabled.</description>
    <label>Enabled</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>