force-app/integration-logs-framework/objects/idhIntegration_Definition__mdt/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <description>
        Logical grouping for dashboard charts (e.g., "ERP", "CRM"). Used for chart categorization.
    </description>
    <label>Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>