force-app/integration-logs-framework/objects/idhIntegration_Definition__mdt/fields/IntegrationCode__c.field-meta.xml
<CustomField>
    <fullName>IntegrationCode__c</fullName>
    <description>Stable, unique integration code used by emitters.</description>
    <label>Integration Code</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>