force-app/integration-logs-framework/objects/idhIntegration_Definition__mdt/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>
        Friendly display name for the dashboard (e.g., "SAP Order Sync" instead of "SAP_ORDERS").
    </description>
    <label>Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>